<resources>
    <string name="app_name" translatable="false">MovieLib</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="image_description">Description</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_watchlist">Watchlist</string>
    <string name="menu_dark_mode">Dark mode</string>
    <string name="menu_my_movies">My movies</string>
    <string name="search_title_dots">Search&#8230;</string>
    <string name="newest_movies">Newest</string>
    <string name="top_rated_movies">Top rated</string>
    <string name="most_viewed_movies">Most viewed</string>
    <string name="popular_movies">Popular</string>
    <string name="details_movie">Movie details</string>
    <string name="loading">Loading</string>
    <string name="slash" translatable="false">/</string>
    <string name="popularity_colon">popularity:</string>
    <string name="title">Title</string>
    <string name="release_date">Release date</string>
    <string name="vote_average">Vote average</string>
    <string name="vote_count">Votes</string>
    <string name="random_number" translatable="false">33</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="added_to_favourite">Movie %s has been added to favourites!</string>
    <string name="removed_from_favourite">Movie %s has been deleted from favourites!</string>
    <string name="added_to_watchlist">Movie %s has been added to watchlist!</string>
    <string name="removed_from_watchlist">Movie %s has been removed from watchlist!</string>
    <string name="no_trailer_available">There is no trailer available.</string>
    <string name="theme">Theme</string>
    <string name="saved_movies">Saved movies</string>
    <string name="remove_favourites_title_msg">Remove movie from favourites</string>
    <string name="remove_favourites_msg">Do you want to delete movie from favourites?</string>
    <string name="remove_watchlist_title_msg">Remove movie from watchlist</string>
    <string name="remove_watchlist_msg">Do you want to delete movie from watchlist?</string>


    <string name="no_data">There is no data to show.</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_data_search">No results found.</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No reviews found.</string>
    <string name="similar_movies">Similar movies</string>
    <string name="no_similar_movies">No similar movies found.</string>
    <string name="server_err">Server error. Something went wrong.</string>
</resources>
