<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item android:title="@string/theme">
            <menu>
                <item
                        android:id="@+id/nav_camera"
                        android:icon="@drawable/ic_menu_gallery"
                        android:title="@string/menu_gallery" />
                <item
                        android:id="@+id/nav_dark_mode"
                        android:icon="@drawable/ic_day_night_black_24dp"
                        android:title="@string/menu_dark_mode" />
            </menu>
        </item>
        <item android:title="@string/saved_movies">
            <menu>
                <item
                        android:id="@+id/nav_favourites"
                        android:icon="@drawable/ic_favorite_filled_primary_24dp"
                        android:title="@string/menu_favourites"
                        app:actionLayout="@layout/menu_badge" />
                <item
                        android:id="@+id/nav_watchlist"
                        android:icon="@drawable/ic_watchlist_purple_24dp"
                        android:title="@string/menu_watchlist"
                        app:actionLayout="@layout/menu_badge" />
            </menu>
        </item>
    </group>

    <item android:title="@string/menu_home">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share" />
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send" />
        </menu>
    </item>
</menu>