<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="bary.apps.moviesLib.data.ConstantsKt"/>
        <import type="bary.apps.moviesLib.R" />
        <variable
                name="movie"
                type="bary.apps.moviesLib.data.database.entity.MovieDetails" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:theme="@style/Theme.AppCompat.DayNight"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="bary.apps.moviesLib.ui.movies.details.MovieDetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Group
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/group_loading"
                    android:layout_marginEnd="8dp"
                    app:constraint_referenced_ids="progress_bar_movie_detail, loading_text_movie_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progress_bar_movie_detail"
                    android:indeterminate="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/loading_text_movie_detail"
                    android:text="@string/loading"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/progress_bar_movie_detail"
                    app:layout_constraintVertical_bias="0.0"/>

            <androidx.constraintlayout.widget.Barrier
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/barrier"
                    app:barrierDirection="bottom"
                    app:layout_constraintTop_toTopOf="parent"
                    app:constraint_referenced_ids="video, movie_overview" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                    android:id="@+id/video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:autoPlay="false"
                    app:showYouTubeButton="true"
                    app:showVideoDuration="true"
                    app:showFullScreenButton="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/barrier"
                    app:layout_constraintTop_toTopOf="parent" />
<!--                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />-->

            <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="@dimen/text_large_size"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/barrier"
                    app:layout_constraintTop_toBottomOf="@id/video"
                    android:text="@{movie.title}"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/movie_title"
                    android:background="@color/colorSilver" />

            <ImageView
                    android:id="@+id/poster"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_margin="8dp"
                    android:paddingTop="8dp"
                    app:imageUrl="@{ConstantsKt.BASE_BACKDROP_PATH + movie.posterPath}"
                    android:contentDescription="@string/image_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_title" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingTop="8dp"
                    android:id="@+id/movie_status"
                    android:text="@{movie.status}"
                    android:textSize="@dimen/input_text_size"
                    app:layout_constraintStart_toEndOf="@id/poster"
                    app:layout_constraintTop_toBottomOf="@id/movie_title" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingTop="8dp"
                    android:id="@+id/release_date"
                    android:text="@{movie.releaseDate}"
                    android:textSize="@dimen/input_text_size"
                    app:layout_constraintStart_toEndOf="@id/movie_status"
                    app:layout_constraintTop_toBottomOf="@id/movie_title" />

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:id="@+id/star"
                    android:src="@drawable/ic_star_golden_24dp"
                    app:layout_constraintStart_toEndOf="@id/poster"
                    app:layout_constraintTop_toBottomOf="@id/movie_status"
                    android:contentDescription="@string/image_description" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/vote_avg"
                    android:text="@{String.valueOf(movie.voteAverage)}"
                    android:textSize="@dimen/input_text_size"
                    app:layout_constraintStart_toEndOf="@id/star"
                    app:layout_constraintTop_toBottomOf="@id/movie_status" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:id="@+id/slash"
                    android:text="@string/slash"
                    android:textSize="@dimen/input_text_size"
                    app:layout_constraintStart_toEndOf="@id/vote_avg"
                    app:layout_constraintTop_toBottomOf="@id/movie_status"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:id="@+id/vote_count"
                    android:text="@{String.valueOf(movie.voteCount)}"
                    android:textSize="@dimen/input_text_size"
                    app:layout_constraintStart_toEndOf="@id/slash"
                    app:layout_constraintTop_toBottomOf="@id/movie_status" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:id="@+id/popularity_movie_details"
                    android:text="@string/popularity_colon"
                    app:layout_constraintStart_toEndOf="@id/poster"
                    app:layout_constraintTop_toBottomOf="@id/vote_avg" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="2dp"
                    android:id="@+id/popularity_value"
                    android:background="@{movie.popularity &lt; 40 ? @color/colorRed : (movie.popularity &lt; 80 ? @color/colorGolden : @color/colorGreen )}"
                    android:text="@{String.valueOf(movie.popularity)}"
                    app:layout_constraintStart_toEndOf="@id/popularity_movie_details"
                    app:layout_constraintTop_toBottomOf="@id/vote_avg" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/poster"
                    android:background="@color/colorSilver" />

            <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/input_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/poster"
                    android:text="@{movie.overview}"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_details_tv"
                    android:textAlignment="textStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_overview"
                    android:text="@{movie.toString()}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>