<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="bary.apps.moviesLib.data.ConstantsKt"/>
        <variable
                name="movie"
                type="bary.apps.moviesLib.data.database.entity.Movie" />
        <variable
                name="viewModel"
                type="bary.apps.moviesLib.ui.movies.BaseMoviesViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:id="@+id/poster_image_newest_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="150dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    placeholderImage="@{@drawable/no_image}"
                    imageUrl="@{movie.posterPath != null ? ConstantsKt.BASE_POSTER_PATH + movie.posterPath : null}"
                    android:contentDescription="@string/image_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            <TextView
                    android:id="@+id/title_newest_movies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:maxLines="3"
                    android:ellipsize="end"
                    android:text="@{movie.title}"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/page_title_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/poster_image_newest_movies"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/release_date_newest_movies"
                    android:text="@{movie.releaseDate}"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textSize="@dimen/input_text_size"
                    app:layout_constraintTop_toBottomOf="@id/title_newest_movies"
                    app:layout_constraintStart_toEndOf="@id/poster_image_newest_movies" />

                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:id="@+id/item_movie_image"
                                android:src="@drawable/ic_star_golden_24dp"
                                app:layout_constraintTop_toBottomOf="@id/release_date_newest_movies"
                                app:layout_constraintStart_toEndOf="@id/poster_image_newest_movies"
                                android:contentDescription="@string/image_description" />
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/vote_newest_movies"
                                android:text="@{String.valueOf(movie.voteAverage)}"
                                app:layout_constraintTop_toBottomOf="@id/release_date_newest_movies"
                                app:layout_constraintStart_toEndOf="@id/item_movie_image"
                                android:layout_marginTop="7dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginStart="4dp"
                                android:layout_marginEnd="4dp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/slash"
                                app:layout_constraintTop_toBottomOf="@id/release_date_newest_movies"
                                app:layout_constraintStart_toEndOf="@id/vote_newest_movies"
                                android:layout_marginTop="7dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginStart="4dp"
                                android:layout_marginEnd="4dp" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/vote_count_newest_movies"
                                android:text="@{String.valueOf(movie.voteCount)}"
                                app:layout_constraintTop_toBottomOf="@id/release_date_newest_movies"
                                app:layout_constraintStart_toEndOf="@id/vote_newest_movies"
                                android:layout_marginTop="7dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginEnd="16dp" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/popularity"
                                android:text="@string/popularity_colon"
                                android:textSize="10sp"
                                android:padding="2dp"
                                app:layout_constraintTop_toBottomOf="@id/item_movie_image"
                                app:layout_constraintStart_toEndOf="@id/poster_image_newest_movies"
                                android:layout_marginTop="4dp"
                                android:layout_marginBottom="8dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/popularity_newest_movies"
                            android:text="@{String.valueOf(movie.popularity)}"
                            android:textSize="10sp"
                            app:layout_constraintTop_toBottomOf="@id/item_movie_image"
                            app:layout_constraintStart_toEndOf="@id/popularity"
                            android:textColor="@color/design_default_color_on_secondary"
                            android:background="@{movie.popularity &lt; 40 ? @color/colorRed : (movie.popularity &lt; 80 ? @color/colorOrange : @color/colorGreen )}"
                            android:padding="2dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginStart="4dp"
                            android:layout_marginEnd="4dp" />

                <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/image_description"
                        android:src="@drawable/ic_add_violet_24dp"
                        android:onClick="@{(view) -> viewModel.watchlistBtnClick(view, movie)}"
                        android:background="?android:attr/selectableItemBackground"
                        app:layout_constraintEnd_toStartOf="@id/heart_button_newest_movies"
                        app:layout_constraintBottom_toBottomOf="parent" />

                <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:contentDescription="@string/image_description"
                        android:onClick="@{(view) -> viewModel.favouriteBtnClick(view, movie)}"
                        android:id="@+id/heart_button_newest_movies"
                        android:src="@drawable/ic_favorite_border_primary_24dp"
                        android:background="?android:attr/selectableItemBackground"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>